--- a/MindTeaser/Base.lproj/Main.storyboard
+++ b/MindTeaser/Base.lproj/Main.storyboard
@@ -31,12 +31,12 @@
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mpt-d9-L2F" customClass="CustomTextField" customModule="MindTeaser" customModuleProvider="target">
                                 <rect key="frame" x="75.5" y="260" width="224" height="40"/>
-                                <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.98863071199999997" green="0.86673629279999997" blue="0.89400386809999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="55n-a0-sa2"/>
                                     <constraint firstAttribute="width" constant="224" id="v89-yi-N9l"/>
                                 </constraints>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.93866670129999996" green="0.27917474510000001" blue="0.43534809349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <userDefinedRuntimeAttributes>
@@ -47,12 +47,12 @@
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gJa-kW-r0q" customClass="CustomTextField" customModule="MindTeaser" customModuleProvider="target">
                                 <rect key="frame" x="75.5" y="335" width="224" height="40"/>
-                                <color key="backgroundColor" red="0.90196078430000004" green="0.90196078430000004" blue="0.90196078430000004" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.98863071199999997" green="0.86673629279999997" blue="0.89400386809999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="224" id="ZQs-PE-3ZP"/>
                                     <constraint firstAttribute="height" constant="40" id="psI-ph-UtA"/>
                                 </constraints>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.93866670129999996" green="0.27917474510000001" blue="0.43534809349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <userDefinedRuntimeAttributes>
@@ -63,18 +63,21 @@
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BnZ-Ap-UYD" customClass="CustomButton" customModule="MindTeaser" customModuleProvider="target">
                                 <rect key="frame" x="115.5" y="410" width="144" height="45"/>
-                                <color key="backgroundColor" red="0.29979473350000002" green="0.59221667050000004" blue="1" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="backgroundColor" red="0.022537564860000001" green="0.83928376439999997" blue="0.62755316500000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="7oS-Be-Lri"/>
                                     <constraint firstAttribute="width" constant="144" id="U5u-kx-4Lg"/>
                                 </constraints>
-                                <state key="normal" title="Login"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" red="0.99996644260000001" green="0.98829478029999995" blue="0.97636538740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <segue destination="6LN-yv-nDW" kind="show" action="showDetailViewController:sender:" id="OgE-Pa-xUN"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.99996644260000001" green="0.98829478029999995" blue="0.97636538740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="0.14891991020000001" green="0.32905924320000002" blue="0.48603230710000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="BnZ-Ap-UYD" firstAttribute="centerX" secondItem="gJa-kW-r0q" secondAttribute="centerX" id="05T-l5-hvV"/>
                             <constraint firstItem="gJa-kW-r0q" firstAttribute="centerX" secondItem="mpt-d9-L2F" secondAttribute="centerX" id="09n-Ke-Ojq"/>
@@ -110,42 +113,51 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="500" horizontalCompressionResistancePriority="400" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nzc-Re-Bnx" customClass="CustomButton" customModule="MindTeaser" customModuleProvider="target">
                                 <rect key="frame" x="235" y="602" width="120" height="45"/>
-                                <color key="backgroundColor" red="0.29979473350000002" green="0.59221667050000004" blue="1" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="backgroundColor" red="0.022537564860000001" green="0.83928376439999997" blue="0.62755316500000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="45" id="4Z0-3o-w4b"/>
                                     <constraint firstAttribute="width" constant="120" id="BuB-Cn-zrN"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                                 <state key="normal" title="Start"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="fontColor">
+                                        <color key="value" red="0.99996644260000001" green="0.98829478029999995" blue="0.97636538740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="yesPressed:" destination="6LN-yv-nDW" eventType="touchUpInside" id="1at-Lo-a1S"/>
                                 </connections>
                             </button>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="400" horizontalCompressionResistancePriority="500" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QR0-Gp-6JG" customClass="CustomButton" customModule="MindTeaser" customModuleProvider="target">
                                 <rect key="frame" x="20" y="602" width="120" height="45"/>
-                                <color key="backgroundColor" red="0.29979473350000002" green="0.59221667050000004" blue="1" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="backgroundColor" red="0.93866670129999996" green="0.27917474510000001" blue="0.43534809349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="tHu-BL-fs2"/>
                                     <constraint firstAttribute="height" constant="45" id="y2C-Ty-zM5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                                 <state key="normal" title="No"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="fontColor">
+                                        <color key="value" red="0.99996644260000001" green="0.98829478029999995" blue="0.97636538740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="noPressed:" destination="6LN-yv-nDW" eventType="touchUpInside" id="PhU-Cj-Fl8"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remember this image:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcu-0A-pu6">
-                                <rect key="frame" x="101" y="90" width="172" height="21"/>
+                                <rect key="frame" x="91" y="90" width="193" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="width" priority="500" constant="172" id="axl-5Z-ugg"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="20"/>
+                                <color key="textColor" red="0.14891991020000001" green="0.32905924320000002" blue="0.48603230710000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ktK-nv-Wrt" customClass="TimerView" customModule="MindTeaser" customModuleProvider="target">
-                                <rect key="frame" x="159" y="21" width="200" height="21"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="159" y="20" width="200" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="NJf-Cu-x6U"/>
                                     <constraint firstAttribute="height" constant="21" id="gR2-Kz-Djy"/>
@@ -155,28 +167,47 @@
                                     <userDefinedRuntimeAttribute type="number" keyPath="duration">
                                         <real key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="fontName" value="Marker Felt"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="fontSize">
+                                        <real key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="color">
+                                        <color key="value" red="0.93866670129999996" green="0.27917474510000001" blue="0.43534809349999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="✅" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D2X-Az-dUK" userLabel="Result">
+                                <rect key="frame" x="10" y="312" width="41" height="43"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.99996644260000001" green="0.98829478029999995" blue="0.97636538740000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Nzc-Re-Bnx" firstAttribute="bottom" secondItem="QR0-Gp-6JG" secondAttribute="bottom" id="5D3-sj-dSS"/>
                             <constraint firstItem="kcu-0A-pu6" firstAttribute="centerX" secondItem="OoB-R7-9jF" secondAttribute="centerX" id="7XQ-Q7-r9V"/>
                             <constraint firstAttribute="bottom" secondItem="QR0-Gp-6JG" secondAttribute="bottom" constant="20" id="Cjj-yc-69U">
                                 <variation key="heightClass=regular-widthClass=regular" constant="80"/>
                             </constraint>
+                            <constraint firstItem="ktK-nv-Wrt" firstAttribute="top" secondItem="s0Q-Qc-U3w" secondAttribute="bottom" id="DbH-DB-Z2h"/>
                             <constraint firstItem="QR0-Gp-6JG" firstAttribute="leading" secondItem="OoB-R7-9jF" secondAttribute="leading" constant="20" id="L1V-QY-aTj">
                                 <variation key="widthClass=regular" constant="80"/>
                             </constraint>
                             <constraint firstAttribute="trailing" secondItem="Nzc-Re-Bnx" secondAttribute="trailing" constant="20" id="OLW-TK-PJm">
                                 <variation key="widthClass=regular" constant="80"/>
                             </constraint>
+                            <constraint firstItem="D2X-Az-dUK" firstAttribute="centerY" secondItem="OoB-R7-9jF" secondAttribute="centerY" id="TnR-Kj-0Fe"/>
                             <constraint firstItem="ktK-nv-Wrt" firstAttribute="trailing" secondItem="OoB-R7-9jF" secondAttribute="trailingMargin" id="dmi-Ej-S0a"/>
-                            <constraint firstItem="kcu-0A-pu6" firstAttribute="top" secondItem="s0Q-Qc-U3w" secondAttribute="bottom" constant="70" id="wIj-9K-lK4"/>
-                            <constraint firstItem="ktK-nv-Wrt" firstAttribute="top" secondItem="OoB-R7-9jF" secondAttribute="topMargin" constant="21" id="yGe-0a-gkR"/>
+                            <constraint firstItem="D2X-Az-dUK" firstAttribute="leading" secondItem="OoB-R7-9jF" secondAttribute="leading" constant="10" id="eRJ-av-jvj"/>
+                            <constraint firstItem="kcu-0A-pu6" firstAttribute="top" secondItem="s0Q-Qc-U3w" secondAttribute="bottom" constant="70" id="wIj-9K-lK4">
+                                <variation key="heightClass=compact" constant="10"/>
+                            </constraint>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="feedbackLabel" destination="D2X-Az-dUK" id="h1M-ND-r7K"/>
+                        <outlet property="feedbackLabelLeading" destination="eRJ-av-jvj" id="Aqr-Mr-DLs"/>
                         <outlet property="noBtn" destination="QR0-Gp-6JG" id="Igy-PR-Xmz"/>
                         <outlet property="timerView" destination="ktK-nv-Wrt" id="Dph-zY-m0M"/>
                         <outlet property="titleLabel" destination="kcu-0A-pu6" id="MdC-EQ-O2J"/>
